; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_SetSamplingRate.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_SetSamplingRate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._xy = type { i32, i32 }

@sampling_rate = common dso_local global i32 0, align 4
@_viReg = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SI_SetSamplingRate(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct._xy*, align 8
  store i32 %0, i32* %2, align 4
  store %struct._xy* null, %struct._xy** %5, align 8
  %6 = load i32, i32* %2, align 4
  %7 = icmp sgt i32 %6, 11
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 11, i32* %2, align 4
  br label %9

9:                                                ; preds = %8, %1
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @_CPU_ISR_Disable(i32 %10)
  %12 = load i32, i32* %2, align 4
  store i32 %12, i32* @sampling_rate, align 4
  %13 = call %struct._xy* (...) @__si_getxy()
  store %struct._xy* %13, %struct._xy** %5, align 8
  store i32 1, i32* %3, align 4
  %14 = load i32*, i32** @_viReg, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 54
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 1
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %9
  store i32 2, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %9
  %21 = load i32, i32* %3, align 4
  %22 = load %struct._xy*, %struct._xy** %5, align 8
  %23 = load i32, i32* %2, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct._xy, %struct._xy* %22, i64 %24
  %26 = getelementptr inbounds %struct._xy, %struct._xy* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = mul nsw i32 %21, %27
  %29 = load %struct._xy*, %struct._xy** %5, align 8
  %30 = load i32, i32* %2, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct._xy, %struct._xy* %29, i64 %31
  %33 = getelementptr inbounds %struct._xy, %struct._xy* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @SI_SetXY(i32 %28, i32 %34)
  %36 = load i32, i32* %4, align 4
  %37 = call i32 @_CPU_ISR_Restore(i32 %36)
  ret void
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local %struct._xy* @__si_getxy(...) #1

declare dso_local i32 @SI_SetXY(i32, i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
